<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:id="@+id/stats_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/frame_char"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.apps.brando.stormbringer.StatView
            android:id="@+id/STR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tag="@string/char_str">

        </com.apps.brando.stormbringer.StatView>

        <com.apps.brando.stormbringer.StatView
            android:id="@+id/CON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tag="@string/char_con">

        </com.apps.brando.stormbringer.StatView>

        <com.apps.brando.stormbringer.StatView
            android:id="@+id/SIZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tag="@string/char_siz">

        </com.apps.brando.stormbringer.StatView>

        <com.apps.brando.stormbringer.StatView
            android:id="@+id/INT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tag="@string/char_int">

        </com.apps.brando.stormbringer.StatView>

        <com.apps.brando.stormbringer.StatView
            android:id="@+id/POW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tag="@string/char_pow">

        </com.apps.brando.stormbringer.StatView>

        <com.apps.brando.stormbringer.StatView
            android:id="@+id/DEX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tag="@string/char_dex">

        </com.apps.brando.stormbringer.StatView>

        <com.apps.brando.stormbringer.StatView
            android:id="@+id/APP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tag="@string/char_app">

        </com.apps.brando.stormbringer.StatView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rolls_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/dmg_bonus"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dmg_bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="Xd6"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:text="@string/roll_idea" />

            <TextView
                android:id="@+id/idea_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:text="@string/roll_luck" />

            <TextView
                android:id="@+id/luck_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:text="@string/roll_dexterity" />

            <TextView
                android:id="@+id/dexterity_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:text="@string/roll_charisma" />

            <TextView
                android:id="@+id/charisma_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/frame_hp"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hit_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="X / X"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/frame_mp"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/magic_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="X / X"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stats_group"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:text="EquipmenT"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/equipment_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:enabled="false"
            android:inputType="textCapSentences|textMultiLine" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>